--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "set NODE_ENV=development&&webpack serve --watch",
     "build-dev": "set NODE_ENV=development&&webpack",
     "build-prod": "set NODE_ENV=production&&webpack",
-    "deploy":  "npm run build-dev&&gh-pages -d dist",
+    "deploy":  "npm run build-prod&&gh-pages -d dist",
     "build": "webpack",
     "clear": "rd /s /q dist"
   },
